<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways|snap" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_story_img"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.87"
        android:contentDescription="@string/story_photo"
        android:src="@drawable/dummy_story_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_username"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_story_img"
        app:layout_constraintTop_toBottomOf="@+id/iv_story_img" />

    <TextView
        android:id="@+id/tv_description_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/name_user"
        app:layout_constraintTop_toBottomOf="@+id/name_user" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dummy_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_description_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_header"
        app:layout_constraintWidth_percent="0.87" />
</androidx.constraintlayout.widget.ConstraintLayout>